Tablets - Responsividade adicionada

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   <main>
     <div class="banner-barbearia-main-container">
       <img class="banner-barbearia-main" src="../barbearia-alura/img/barbearia-mobile.png" alt="Foto de uma barbearia">
+      <img class="banner-barbearia-main-2" src="../barbearia-alura/img/banner.jpg" alt="Foto de uma barbearia">
     </div>
 
     <section class="about-us">
@@ -50,8 +51,6 @@
       <h2 class="title-main">Sobre a Barbearia Alura</h2>
 
       <div class="conteudo-about-us">
-        <img class="utensilios-barbearia-main" src="../barbearia-alura/img/utensilios.jpg"
-          alt="utensilios de um barbeiro">
 
         <p class="conteudo-paragrafo paragrafo-negrito">
           Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de
