Responsividade adicionada para mobile em produtos

--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    
+
     <header class="cabecalho">
       <section class="navbar-header">
         <h1 class="image-container-header">
@@ -41,21 +41,21 @@
     </header>
     <main>
         <ul class="produtos">
-            <li>
-                <h2>Cabelo</h2>
-                <img src="../barbearia-alura/img/cabelo.jpg">
+            <li class="produto-card">
+                <h2 class="title-products">Cabelo</h2>
+                <img class="image-products" src="../barbearia-alura/img/cabelo.svg">
                 <p class="product-description">Na tesoura ou máquina, como o cliente preferir</p>
                 <p class="product-price">R$30</p>
             </li>
-            <li>
-                <h2>Barba</h2>
-                <img src="../barbearia-alura/img/barba.jpg">
+            <li class="produto-card">
+                <h2 class="title-products">Barba</h2>
+                <img class="image-products" src="../barbearia-alura/img/barba.svg">
                 <p class="product-description">Corte e desenho profissional de barba</p>
                 <p class="product-price">R$25</p>
             </li>
-            <li>
-                <h2>Cabelo e Barba</h2>
-                <img src="../barbearia-alura/img/cabelo+barba.jpg">
+            <li class="produto-card">
+                <h2 class="title-products">Cabelo e Barba</h2>
+                <img class="image-products" src="../barbearia-alura/img/cabelo-barba.svg">
                 <p class="product-description">Pacote completo de cabelo e barba</p>
                 <p class="product-price">R$ 50</p>
             </li>
