--- a/contact.html
+++ b/contact.html
@@ -46,17 +46,17 @@
 
             <fieldset class="basic-informations">
 
-                <label for="name">Nome Completo</label>
+                <label class="titles-labels" for="name">Nome Completo</label>
                 <input type="text" id="name" class="input-padrao" placeholder="Ex: João da Silva" required>
 
-                <label for="email">Email</label>
+                <label class="titles-labels" for="email">Email</label>
                 <input type="email" id="email" class="input-padrao" placeholder="seuemail@email.com" required>
 
-                <label for="telphone">Telefone</label>
+                <label class="titles-labels" for="telphone">Telefone</label>
                 <input type="tel" id="telephone" class="input-padrao" placeholder="(XX) 9.XXXX-XXXX"
                     pattern="[0-9] {2}-[0-9] [5]-{0-9} {4}" maxlength="11" required>
 
-                <label for="mensage">Mensagem</label>
+                <label class="titles-labels" for="mensage">Mensagem</label>
                 <textarea id="mensage" class="input-padrao" cols="60" rows="10"
                     placeholder="Descreva o serviço que quer contratar, e caso tenha um modelo de corte já nos informe"
                     required></textarea>
@@ -66,7 +66,7 @@
         </section>
 
         <section class="formulario-meio-contato-container">
-            <form class="formulario">
+            <form class="formulario-how-contact-you">
 
 
                 <fieldset class="how-to-contact-you">
@@ -112,12 +112,13 @@
             </label>
 
             <input class="send-form" type="submit" value="Enviar Formulário">
-
         </section>
 
+        
+
         <section class="tabela-horarios-container">
-            <div class="tabela">
-                <table>
+            <!-- <div class="tabela"> -->
+                <table class="tabela-horarios">
 
                     <thead>
                         <tr>
@@ -142,7 +143,7 @@
                     </tbody>
 
                 </table>
-            </div>
+            <!-- </div> -->
 
         </section>
         </form>
