Fim da responsividade da pagina contact, pequenas incerções de cores em outros css

--- a/contact.html
+++ b/contact.html
@@ -69,9 +69,9 @@
             <form class="formulario-how-contact-you">
 
 
-                <fieldset class="how-to-contact-you">
+                <fieldset class="how-to-contact-you social-media">
 
-                    <label>Como você prefere nosso contato?</label>
+                    <label class="title-social-media-contact">Como você prefere nosso contato?</label>
 
                     <label for="Whatsapp">
                         <input id="Whatsapp" name="contato" value="Whatsapp" type="radio" checked>
@@ -85,10 +85,10 @@
                     </label>
 
 
-                    <label for="radio-email">
+                    <labe for="radio-email">
                         <input id="radio-email" name="contato" value="email" type="radio">
                         Email
-                    </label>
+                    </labe>
 
                 </fieldset>
 
